--- a/index.html
+++ b/index.html
@@ -18,14 +18,7 @@
         <h1>Open Integrity Initiative</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/collina/open-integrity">View the Project on GitHub <small>collina/open-integrity</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/collina/open-integrity/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/collina/open-integrity/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/collina/open-integrity">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <p class="view"><a href="https://github.com/collina/open-integrity">View the Project on GitHub</a></p>
       </header>
       <section>
         <p>The Open Integrity Index will enable users to make sophisticated decisions about the tools they use for privacy and communications, without requiring a high-level security engineering background. </p>
