--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p></p>
 
         <p class="view"><a href="https://github.com/collina/open-integrity">View the Project on GitHub</a></p>
+        <p>A Collaborative Project between Guardian Project, Internews, OpenITP, Tactical Technology Collective, and Tor Project</p>
       </header>
       <section>
         <p>The Open Integrity Index will enable users to make sophisticated decisions about the tools they use for privacy and communications, without requiring a high-level security engineering background. </p>
