--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
         <p>A Collaborative Project between Guardian Project, Internews, OpenITP, Tactical Technology Collective, and Tor Project</p>
       </header>
       <section>
-        <p>The Open Integrity Index will enable users to make sophisticated decisions about the tools they use for privacy and communications, without requiring a high-level security engineering background. </p>
+        <p> The Open Integrity Index will enable users to make sophisticated decisions about the tools they use for privacy and communications, without requiring a high-level security engineering background. </p>
+        <p> OII has several distinct objectives, including:</p>
+        <ul>
+        	<li> Enabling users to make educated decisions about the tools they use and the ways in which they expose their personal information.</li>
+			<li> Establishing a platform for the results of independent audits to be made accessible to a general audience.</li>
+			<li> Providing a resource for other platforms, such as application markets, to integrate digital security into the decision-making process of installing software.</li>
+			<li> Improving access to material on digital security principles in languages other than English. </li>
+			<li> Promoting stronger awareness on fundamental precepts of privacy by design in the development of communications tools.</li>
+			<li> Encouraging stronger relationships between developers and their communities of users.</li>
+        </ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/collina">collina</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
